After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 658294 - gst-inspect videorate hangs
gst-inspect videorate hangs
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 0.10.36
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-09-05 20:45 UTC by Vincent Penquerc'h
Modified: 2011-09-06 09:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
videorate: too much of a good thing is still too much - even for locking (1.38 KB, patch)
2011-09-05 22:02 UTC, Vincent Penquerc'h
committed Details | Review

Description Vincent Penquerc'h 2011-09-05 20:45:36 UTC
Reminder for me to fix tomorrow.
Comment 1 Vincent Penquerc'h 2011-09-05 22:02:26 UTC
Created attachment 195737 [details] [review]
videorate: too much of a good thing is still too much - even for locking

Seriously...
Comment 2 Sebastian Dröge (slomo) 2011-09-06 08:35:56 UTC
Comment on attachment 195737 [details] [review]
videorate: too much of a good thing is still too much - even for locking

Taking the object lock in set/get_property should always work and does work for other elements. Something else must do something wrong with the lock
Comment 3 Tim-Philipp Müller 2011-09-06 08:45:39 UTC
The object lock has already been taken before the switch() statement..
Comment 4 Tim-Philipp Müller 2011-09-06 09:01:10 UTC
commit 78f50f2d2522cea0e3db7dcd866911b13f4ac152
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Mon Sep 5 23:00:30 2011 +0100

    videorate: don't take the object lock twice in {set,get}_property
    
    https://bugzilla.gnome.org/show_bug.cgi?id=658294