videorate: don't take the object lock twice in {set,get}_property

https://bugzilla.gnome.org/show_bug.cgi?id=658294